# GovTechHackathon2023-DashboardLadestationenElektroautos

./: Comparison power consumption.md  README.md
code/: .gitignore  README.md  composer.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
code/.ddev/: config.yaml  docker-compose.endpoints.yaml  docker-compose.vite.yaml
code/.ddev/endpoints/: Dockerfile.endpoints
code/.github/workflows/: deploy.yml
code/config/: general.php  license.key  vite.php
code/config/project/: project.yaml
code/config/project/siteGroups/: 0d20a011-14b4-4cf5-9040-1702d37d3a26.yaml
code/config/project/sites/: default--b9fbdcef-6ae6-49b2-bbc4-9d6220f2fbf5.yaml
code/src/: app.js
code/src/js/: script.js
code/src/js/vue-components/: heatMap.vue  leftSide.vue  rightSide.vue  staticData.vue
code/src/scss/_custom/: font.scss  helpers.scss
code/storage/: .gitignore
code/templates/: _entry.twig  _layout.twig
code/templates/_components/: default.twig  text.twig
code/templates/_includes/: footer.twig
code/templates/_sections/: default.twig
code/templates/_sections/homepage/: default.twig
dle_bff/: pom.xml
dle_bff/src/main/java/ch/opendata/dle/: DleBffApplication.java
dle_bff/src/main/java/ch/opendata/dle/controller/: DashboardController.java  HeatmapController.java  HistogramController.java  SampleDataGenerator.java
dle_bff/src/main/resources/: index_template_charging.json  index_template_realtime.json
elastic/: docker-compose.yml
ingest/: .env.example  Cargo.toml
ingest/src/: main.rs
(+7 files in other folders)
